# Django-Core

./: .flake8  README.rst  pyproject.toml
core/core/utils/: collections.py  misc.py  settings.py
core/project/settings/: __init__.py  base.py  custom.py  dockers.py  envvars.py
core/project/settings/templates/: settings.dev.py
